<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="com.notseller.glebsabirzyanov.avianotsales.MainActivity">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/greeting"
		android:textSize="18sp" />

	<EditText
		android:id="@+id/editName"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/hintName"
		android:inputType="text"
		android:textSize="20sp" />

	<EditText
		android:id="@+id/editCost"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/hintCost"
		android:inputType="number"
		android:textSize="20sp" />

	<EditText
		android:id="@+id/editClass"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/hintClass"
		android:inputType="text"
		android:textSize="20sp" />

	<Button
		android:id="@+id/btnGet"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/buttonGet"
		android:textSize="25sp" />

	<TextView
		android:id="@+id/textTicket"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text=""
		android:textSize="30sp" />

</LinearLayout>
